[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Jumper.png" type="Texture" id=1]
[ext_resource path="res://Jumper.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/explosion1.mp3" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 6.60922

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6, 5 )

[node name="Jumper" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "default"
anims/default = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Hit_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_area"]
position = Vector2( 0.198086, 0.693304 )
shape = SubResource( 2 )

[node name="collide_area" type="Area2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="collide_area"]
position = Vector2( 0.198086, 0.693304 )
shape = SubResource( 2 )

[node name="Hit_ground_area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_ground_area"]
position = Vector2( 0.10048, 4.35355 )
shape = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Shoot_timer" type="Timer" parent="."]
